--- a/exercicios/ex025/form004.html
+++ b/exercicios/ex025/form004.html
@@ -12,11 +12,15 @@
             <legend>Dados Pessoais</legend>
             <p>
                 <label for="inome">Nome</label>
-                <input type="text" name="nome" id="inome" required autocomplete="name" maxlength="50">
+                <input type="text" name="nome" id="inome" required autocomplete="name" maxlength="50" placeholder="Nome completo">
+            </p>
+            <p>
+                <label for="itel">Telefone</label>
+                <input type="tel" name="tel" id="itel" required placeholder="(12) 3456-7890" autocomplete="tel">
             </p>
             <p>
                 <label for="iemail">E-mail</label>
-                <input type="email" name="email" id="iemail" required autocomplete="email">
+                <input type="email" name="email" id="iemail" required autocomplete="email" placeholder="E-mail válido">
             </p>
             <p>
                 <label for="isenha">Senha</label>
