--- a/exercicios/ex026/mq004/index.html
+++ b/exercicios/ex026/mq004/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobile First</title>
+    <link rel="stylesheet" href="styles/style.css" media="all">
+    <link rel="stylesheet" href="styles/media-query.css">
 </head>
 <body>
-    
+    <main>
+        <h1>Testando Media Queries</h1>
+        <img src="images/icon-phone.png" alt="Acessando via smartphone" id="phone">
+        <img src="images/icon-tablet.png" alt="Acessando via tablet" id="tablet">
+        <img src="images/icon-print.png" alt="Versão para impressão" id="print">
+        <img src="images/icon-pc.png" alt="Versão para desktop" id="pc">
+        <img src="images/icon-tv.png" alt="Acessando via smartTV" id="tv">
+    </main>
 </body>
 </html>
